--- a/css/custom.css
+++ b/css/custom.css
@@ -1,80 +1,161 @@
-/* Move down content because we have a fixed navbar that is 50px tall */
-body {
-  padding-top: 50px;
-  padding-bottom: 20px;
-}
-
-#get-involved{
-	background-color: #f5f5f5;
-}
-.jumbotron{
-	text-align: center;
-	background-image: url('../images/hero_image.jpg');
-	color: white;
-}
-
-.btn-lg {
-	font-size: 36px;
-}
-
-ul.nav, .jumbotron h1{
-	font-family: 'Arvo', courier, serif;
-}
-ul.nav{
-	font-size: 13px;
-}
-footer{
-	background-color: #f74c3c;
-	padding-top: 150px;
-	padding-bottom: 30px;
-}
-form{
-	font-family: 'Tahoma', courier, serif;
-	margin-top: 20px;
-	margin-bottom: 20px;
-}
-.jumbotron h1 {
-	margin-top: 0px;
-	margin-bottom: 36px;
-}
-.jumbotron p {
-	margin-bottom: 36px;
-	font-weight: 100;
-	padding: 0 50px;
-}
-.homepage{
-	text-align: center;
-	padding-top: 30px;
-	padding-bottom: 30px;
-}
-.homepage h2, h3{
-	color:#e74c3c;
-	font-family: 'Arvo', courier, serif;
-	text-transform: uppercase;
-}
-.homepage h2{
-	font-size: 30px;
-}
-.homepage h3 {
-	font-size: 26px;
-}
-.homepage p{
-	font-size: 21px;
-	font-weight: 300px;
-}
-.homepage a{
-	color: #e74c3c;
-}
-.homepage a:hover{
-	color: #e74c3c;
-	text-decoration: none;
-	opacity: 0.5;
-}
-.homepage hr{
-	border-top: 1px solid #e74c3c;
-	width: 160px;
-	margin: 15px auto;
-}
-.contato input{
-	width:50%;
+/* Move down content because we have a fixed navbar that is 50px tall
+* by Jorge Dias
+* */
+
+body {
+
+  padding-top: 50px;
+
+  padding-bottom: 20px;
+
+}
+
+
+
+#get-involved{
+
+	background-color: #f5f5f5;
+
+}
+
+.jumbotron{
+
+	text-align: center;
+
+	background-image: url('../images/hero_image.jpg');
+
+	color: white;
+
+}
+
+
+
+.btn-lg {
+
+	font-size: 36px;
+
+}
+
+
+
+ul.nav, .jumbotron h1{
+
+	font-family: 'Arvo', courier, serif;
+
+}
+
+ul.nav{
+
+	font-size: 13px;
+
+}
+
+footer{
+
+	background-color: #f74c3c;
+
+	padding-top: 150px;
+
+	padding-bottom: 30px;
+
+}
+
+form{
+
+	font-family: 'Tahoma', courier, serif;
+
+	margin-top: 20px;
+
+	margin-bottom: 20px;
+
+}
+
+.jumbotron h1 {
+
+	margin-top: 0px;
+
+	margin-bottom: 36px;
+
+}
+
+.jumbotron p {
+
+	margin-bottom: 36px;
+
+	font-weight: 100;
+
+	padding: 0 50px;
+
+}
+
+.homepage{
+
+	text-align: center;
+
+	padding-top: 30px;
+
+	padding-bottom: 30px;
+
+}
+
+.homepage h2, h3{
+
+	color:#e74c3c;
+
+	font-family: 'Arvo', courier, serif;
+
+	text-transform: uppercase;
+
+}
+
+.homepage h2{
+
+	font-size: 30px;
+
+}
+
+.homepage h3 {
+
+	font-size: 26px;
+
+}
+
+.homepage p{
+
+	font-size: 21px;
+
+	font-weight: 300px;
+
+}
+
+.homepage a{
+
+	color: #e74c3c;
+
+}
+
+.homepage a:hover{
+
+	color: #e74c3c;
+
+	text-decoration: none;
+
+	opacity: 0.5;
+
+}
+
+.homepage hr{
+
+	border-top: 1px solid #e74c3c;
+
+	width: 160px;
+
+	margin: 15px auto;
+
+}
+
+.contato input{
+
+	width:50%;
+
 }
